<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/bg"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/bg_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_login"
            android:textSize="@dimen/_25sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_login" />

            <EditText
                android:layout_width="0dp"
                android:id="@+id/userName"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/username"
                android:textColorHint="@color/colorGray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_pass" />

            <EditText
                android:layout_width="0dp"
                android:id="@+id/pword"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/txt_pass"
                android:textColorHint="@color/colorGray" />

        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"/>

    </LinearLayout>

<!--    <ProgressBar-->
<!--        android:id="@+id/loading"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/bg"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/bg" />-->
    <include
        android:id="@+id/llProgressBar"
        android:visibility="gone"
        layout="@layout/layout_progress_bar"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg" />
</androidx.constraintlayout.widget.ConstraintLayout>